[gd_scene load_steps=4 format=3 uid="uid://usfq5ar7em4i"]

[ext_resource type="Script" path="res://scenes/player_movement.gd" id="1_44f4q"]
[ext_resource type="PackedScene" uid="uid://dpfk1ln8o4dan" path="res://scenes/arm.tscn" id="2_p4n8q"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jk65a"]

[node name="Player" type="Node3D"]
script = ExtResource("1_44f4q")

[node name="BodyBody" type="RigidBody3D" parent="."]
transform = Transform3D(0.999909, 0, 0, 0, 0.999909, 0, 0, 0, 0.999909, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BodyBody"]
shape = SubResource("SphereShape3D_jk65a")

[node name="BodyModel" type="CSGSphere3D" parent="BodyBody"]

[node name="LeftShoulder" type="Node3D" parent="BodyBody"]
transform = Transform3D(1.00009, 0, 0, 0, 1.00009, 0, 0, 0, 1.00009, -0.500046, 0, 0)

[node name="RightShoulder" type="Node3D" parent="BodyBody"]
transform = Transform3D(1.00009, 0, 0, 0, 1.00009, 0, 0, 0, 1.00009, 0.500046, 0, 0)

[node name="LeftArm" parent="BodyBody" instance=ExtResource("2_p4n8q")]
transform = Transform3D(-1.00009, 8.74308e-08, 0, -8.74308e-08, -1.00009, 0, 0, 0, 1.00009, 0, 0, 0)

[node name="BodyJoint" parent="BodyBody/LeftArm" index="1"]
node_a = NodePath("../..")

[node name="RightArm" parent="BodyBody" instance=ExtResource("2_p4n8q")]
transform = Transform3D(1.00009, 0, 0, 0, 1.00009, 0, 0, 0, 1.00009, 0, 0, 0)

[node name="BodyJoint" parent="BodyBody/RightArm" index="1"]
node_a = NodePath("../..")

[editable path="BodyBody/LeftArm"]
[editable path="BodyBody/LeftArm/ArmBody"]
[editable path="BodyBody/RightArm"]
